@@ -3,7 +3,8 @@
 :base: https://github.com/DAG-OS/cookiecutter-ansible-role
 :v1_0_0: {base}/releases/tag/v1.0.0
 :v1_0_1: {base}/compare/v1.0.0..v1.0.1
-:unreleased: {base}/compare/v1.0.1..HEAD
+:v1_0_2: {base}/compare/v1.0.1..v1.0.2
+:unreleased: {base}/compare/v1.0.2..HEAD
 
 All notable changes to this project will be documented in this file.
 
@@ -13,6 +14,12 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 == {unreleased}[Unreleased]
 
 This section tracks upcoming changes that are not yet released.
+
+== {v1_0_2}[v1.0.2]
+
+=== Changed
+
+* After initializing Ansible role via Molecule, remove redundant `tests` directory.
 
 == {v1_0_1}[v1.0.1]
 
